# TaskFlow

./: .gitignore  CHANGELOG.md  EXECUTION_ENGINE.md  EXECUTION_PHASE_1.md  LICENSE  README.md  fix_webui_emoji.py  main.py  momentum_demo.py  pyproject.toml  restart_server.py  setup.py  upgradtion and other ideas.txt  verify_fix.py
docs/: deep-dive.md
docs/assets/: linkedin-card.html
task_manager/: commands.py  models.py  server.py  setup.py  storage.py  system_detector.py  web_ui.py
task_manager/blockers/: __init__.py  base.py  blocklist.py  gentle.py  linux.py  macos.py  proxy_filter.py  windows.py
task_manager/static/: dashboard.css  dashboard.js
taskflow/: __main__.py  cli.py  main.py  taskflow_bg_unblocker.py
taskflow/ui/: cascade.py  horizon.py  palette.py  states.py
