[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-cli"
version = "8.0.0"
description = "A calm, powerful CLI productivity framework with focus sessions and web dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "K Mohith Kannan"}
]
keywords = ["cli", "task", "manager", "productivity", "time-management", "focus", "pomodoro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "dateparser>=1.1.0",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/Mohith535/TaskFlow"
Repository = "https://github.com/Mohith535/TaskFlow"
Issues = "https://github.com/Mohith535/TaskFlow/issues"

[project.scripts]
taskflow = "taskflow.cli:main"

[tool.setuptools.packages.find]
include = ["taskflow*", "task_manager*"]
